INTYGFV-12005: Builds, runs and passes cypress and restAssured