@@ -21,7 +21,6 @@ package se.inera.intyg.privatlakarportal.auth;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -52,7 +51,7 @@ public class FakeAuthenticationFilter extends AbstractAuthenticationProcessingFi
         }
         String parameter = request.getParameter("userJsonDisplay");
         // we manually encode the json parameter
-        String json = URLDecoder.decode(parameter, StandardCharsets.UTF_8);
+        String json = URLDecoder.decode(parameter, "UTF-8");
 
         return performFakeElegAuthentication(json);
     }
